[package]
name = "json-syntax"
version = "0.8.7"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Strict JSON parsing and mapping library"
categories = ["parsing", "data-structures"]
keywords = ["parsing", "json", "rfc", "mapping"]
repository = "https://github.com/timothee-haudebourg/json-syntax"
documentation = "https://docs.rs/json-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
json-number = { version = "0.4.1", features = [ "smallnumberbuf" ] }
smallvec = "1.9"
smallstr = "0.3"
locspan = "0.7.3"
locspan-derive = "0.5.1"
indexmap = "1.9.1"
decoded-char = "0.1"
hashbrown = { version = "0.12.1", features = [ "raw" ] }
contextual = { version = "0.1", optional = true }