[package]
name = "json-syntax"
version = "0.9.3"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Strict JSON parsing and mapping library"
categories = ["parsing", "data-structures"]
keywords = ["parsing", "json", "rfc", "mapping"]
repository = "https://github.com/timothee-haudebourg/json-syntax"
documentation = "https://docs.rs/json-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
canonicalize = [ "ryu-js", "json-number/canonical" ]
serde = [ "dep:serde", "json-number/serde" ]
serde_json = [ "dep:serde_json", "json-number/serde_json" ]

[dependencies]
json-number = { version = "0.4.5", features = [ "smallnumberbuf" ] }
smallvec = "1.9"
smallstr = "0.3"
locspan = "0.7.3"
locspan-derive = "0.6"
indexmap = "1.9.1"
decoded-char = "0.1"
hashbrown = { version = "0.12.1", features = [ "raw" ] }
contextual = { version = "0.1.1", optional = true }
ryu-js = { version = "0.2.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }