[package]
name = "json-syntax"
version = "0.12.2"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Strict JSON parsing and mapping library"
categories = ["parsing", "data-structures"]
keywords = ["parsing", "json", "rfc", "mapping"]
repository = "https://github.com/timothee-haudebourg/json-syntax"
documentation = "https://docs.rs/json-syntax"
license = "MIT/Apache-2.0"
readme = "README.md"
rust-version = "1.71.0"

[features]
## JSON Canonicalization Scheme (JCS) implementation. 
canonicalize = [ "ryu-js", "json-number/canonical" ]

## Serialization/Deserialization support using `serde`.
serde = [ "dep:serde", "json-number/serde", "smallstr/serde" ]

## Compatibility layer with the `serde_json` crate.
serde_json = [ "dep:serde_json", "json-number/serde_json" ]

[dependencies]
json-number = { version = "0.4.8", features = [ "smallnumberbuf" ] }
smallvec = "1.9"
smallstr = "0.3"
locspan = "0.8.2"
locspan-derive = "0.6"
indexmap = "1.9.1"
decoded-char = "0.1"
hashbrown = { version = "0.12.1", features = [ "raw" ] }
contextual = { version = "0.1.1", optional = true }
ryu-js = { version = "0.2.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
utf8-decode = "1.0.1"

[dev-dependencies]
serde = { version = "1.0", features = [ "derive" ] }

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "serde_json"
required-features = ["serde_json"]